修改并简化了框架

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.woyeshi.manager">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".ManagerApplication"
         android:allowBackup="true"
