--- a/build.gradle
+++ b/build.gradle
@@ -15,10 +15,21 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        config {
+            storeFile file("../CERT.keystore")
+            storePassword "lucy1106"
+            keyAlias "CERT"
+            keyPassword "lucy1106"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
