--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
     <application
         android:name=".ManagerApplication"
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/icon_1"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/icon"
+        android:roundIcon="@drawable/icon_1"
         android:supportsRtl="true"
         android:theme="@style/ImageTranslucentTheme">
 
