--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
         <activity
             android:name=".activities.FindPasswordActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.RegisterNextActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
