fileProvider configuration finished..

--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation project(':presenterimpl')
     implementation project(':entity')
     implementation project(':libs')
+    implementation project(':lib_ucrop')
 }
 kotlin {
     experimental {
