--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -51,6 +51,19 @@
         <activity
             android:name=".activities.RegisterNextActivity"
             android:screenOrientation="portrait" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="cn.woyeshi.manager.fileProvider"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <!--元数据-->
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+
+
     </application>
 
 </manifest>
